Add bootstrap functionality to dashboard

--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,6 +1,16 @@
-<h1>Welcome to the Task Manager</h1>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-<ul>
-  <li><a href="/tasks">Task Index</a></li>
-  <li><a href="/tasks/new">New Task</a></li>
-</ul>
+<body>
+   <div class="jumbotron text-center">
+     <h1>Welcome to Task Manager</h1>
+     <a href="/tasks" class="btn btn-lg btn-default">Tasks</a>
+     <a href="/tasks/new" class="btn btn-lg btn-primary">New Task</a>
+   </div>
+
+   <div class="row">
+     <div class="col-md-8">
+       <h1>Manage all your tasks</h1>
+       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+     </div>
+   </div>
+</body>
