Add final feature testing with Capybara

--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 <body>
-   <div class="jumbotron text-center">
+   <div class="jumbotron text-center" id="greeting">
      <h1>Welcome to Task Manager</h1>
      <a href="/tasks" class="btn btn-lg btn-default">Tasks</a>
      <a href="/tasks/new" class="btn btn-lg btn-primary">New Task</a>
